<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"/>
            <!-- android:icon="@drawable/ic_local_movies_black_24dp" -->
        <item
            android:id="@+id/nav_create_battle"
            android:title="@string/nav_create_battle" />
        <item
            android:id="@+id/nav_current_battles"
            android:title="@string/nav_current_battles" />
        <item
            android:id="@+id/nav_completed_battles"
            android:title="@string/nav_completed_battles" />
        <item
            android:id="@+id/nav_challenges"
            android:title="@string/nav_challenges" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_add_followers"
            android:title="@string/nav_add_followers" />
        <item
            android:id="@+id/nav_view_followers"
            android:title="@string/nav_view_followers" />
        <item
            android:id="@+id/nav_logout"

            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_admin_reportings"

            android:title="@string/nav_reportings" />


    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>