<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/row_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_vertical_padding">

    <ImageView
        android:id="@+id/thumbnailImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"


        />


    <TextView

        android:id = "@+id/battle_list_item_battle_name_title_TextView"
        android:layout_below="@id/thumbnailImageView"
        android:layout_alignParentStart="true"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:textStyle="bold"
        android:text="@string/battle_name"
        />
    <TextView
        android:id = "@+id/battle_list_item_battle_name_TextView"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_toEndOf= "@id/battle_list_item_battle_name_title_TextView"
        android:layout_below = "@id/thumbnailImageView"
        />
    <TextView
        android:id = "@+id/battle_list_item_battle_challenger_title_TextView"
        android:layout_alignParentStart="true"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_below= "@id/battle_list_item_battle_name_title_TextView"
        android:textStyle="bold"
        android:text="@string/challenger"
        />
    <TextView
        android:id = "@+id/battle_list_item_challenger_name_TextView"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_toEndOf = "@id/battle_list_item_battle_challenger_title_TextView"
        android:layout_below="@id/battle_list_item_battle_name_title_TextView"
        />
    <TextView
        android:id = "@+id/battle_list_item_battle_challenged_title_TextView"
        android:layout_alignParentStart="true"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_below= "@id/battle_list_item_battle_challenger_title_TextView"
        android:textStyle="bold"
        android:text="@string/challenged"
        />
    <TextView
        android:id = "@+id/battle_list_item_challenged_name_TextView"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_toEndOf = "@id/battle_list_item_battle_challenged_title_TextView"
        android:layout_below="@id/battle_list_item_battle_challenger_title_TextView"
        />
    <TextView
        android:id = "@+id/battle_rounds_title_TextView"
        android:layout_alignParentStart="true"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_below= "@id/battle_list_item_battle_challenged_title_TextView"
        android:textStyle="bold"
        android:text="@string/rounds"
        />
    <TextView
        android:id = "@+id/battle_rounds_TextView"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_toEndOf = "@id/battle_rounds_title_TextView"
        android:layout_below="@id/battle_list_item_battle_challenged_title_TextView"
        />
    <TextView
        android:id = "@+id/battle_status_TextView"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_below="@id/battle_rounds_title_TextView"
        />




</RelativeLayout>